auto-set-domain-name/04-external-dns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: hse-llm-project
  labels:
    app: external-dns
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
        - name: external-dns
          image: registry.k8s.io/external-dns/external-dns:v0.15.1
          args:
            - --source=gateway-httproute
            - --source=gateway-grpcroute
            - --provider=coredns
            - --domain-filter=hse-llm.internal
            - --policy=upsert-only
            - --registry=txt
            - --txt-owner-id=hse-llm-project
            - --log-level=info
