auto-set-domain-name/01-etcd.yaml
# dns-pipeline/01-etcd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etcd-dns
  namespace: hse-llm-project
  labels:
    app: etcd-dns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etcd-dns
  template:
    metadata:
      labels:
        app: etcd-dns
    spec:
      containers:
        - name: etcd
          image: quay.io/coreos/etcd:v3.5.17
          command:
            - etcd
            - --listen-client-urls=http://0.0.0.0:2379
            - --advertise-client-urls=http://etcd-dns.hse-llm-project.svc.cluster.local:2379
            - --data-dir=/var/lib/etcd
          ports:
            - containerPort: 2379
              name: client
          volumeMounts:
            - name: etcd-data
              mountPath: /var/lib/etcd
      volumes:
        - name: etcd-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: etcd-dns
  namespace: hse-llm-project
spec:
  selector:
    app: etcd-dns
  ports:
    - port: 2379
      targetPort: 2379
      name: client
