auto-set-domain-name/05-httproute-example.yaml
# dns-pipeline/05-httproute-example.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-app-2-route
  namespace: hse-llm-project
spec:
  parentRefs:
    - name: web-gateway
      namespace: hse-llm-project
  hostnames:
    - "demo.hse-llm.internal"    # ← прописываешь руками
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: test-app-2-api
          port: 8080
          namespace: hse-llm-project
