auto-set-domain-name/10-httproute-deployment-service.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: deployment-service-route
  namespace: hse-llm-project
spec:
  parentRefs:
    - name: web-gateway
      namespace: hse-llm-project
  hostnames:
    - deployment.hse-llm.internal
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: deployment-service
          port: 8000
