auto-set-domain-name/12-httproute-minio-console.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console-route
  namespace: hse-llm-project
spec:
  parentRefs:
    - name: web-gateway
  hostnames:
    - "minio.hse-llm.internal"
    - "minio.hse-llm-project-2026.ru"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: minio-model-cache
          port: 9001
