auto-set-domain-name/13-httproute-postgresql-ui.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: postgresql-ui-route
  namespace: hse-llm-project
spec:
  parentRefs:
    - name: web-gateway
      namespace: hse-llm-project
  hostnames:
    - "postgres.hse-llm.internal"
    - "postgres.hse-llm-project-2026.ru"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: postgresql-ui
          port: 80
